# rawhplayer

./: App.tsx  README.md  Rawh Player .docx  config.ts  index.html  index.tsx  jsmediatags.d.ts  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
components/: Controls.tsx  Equalizer.tsx  Logo.tsx  Navigation.tsx  QueueDrawer.tsx  QueueSidebar.tsx  ScrollArea.tsx  TitleBar.tsx  Toast.tsx  TrackList.tsx  VideoPlayer.tsx  Visualizer.tsx
pages/: AudiophilePage.tsx  ConnectPage.tsx  FilesPage.tsx  PlaylistPage.tsx  SearchPage.tsx  SettingsPage.tsx
services/: geminiService.ts  nativeAudio.ts  playlistImporter.ts  youtubeService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_engine.rs  lib.rs
