[package]
name = "rawhplayer"
version = "0.1.0"
description = "Rawh Player Native Audio Engine"
authors = ["Rawh Audio"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
symphonia = { version = "0.5.4", features = ["all"] }
rustfft = "6.4.1"
parking_lot = "0.12.5"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
